--- a/playground/index.html
+++ b/playground/index.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mini Vite Playground</title>
   <link rel="stylesheet" href="./src/styles/index.css">
-  <link href="
-https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css
-" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css" rel="stylesheet">
 
   <script src="node_modules/vite/dist/client.js"></script>
 </head>
